<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">BetShare</string>
	<string name="userinfo">USER DETAIL</string>
	<string name="mybets">MY BETS</string>
	<string name="allbets">ALL BETS</string>
	<string name="createevent">ADD EVENT</string>
	<string name="livescore">LIVE SCORE</string>
	<string name="closeapp">EXIT</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_logout">Logout</string>
	<string name="action_help">Help</string>
	<string name="action_about">About</string>
	<string name="submit">ADD TO MY LIST</string>
	<string name="entercomment">Enter your comment(max 300 chars)</string>
	<string name="facebook_app_id">816862041695951</string>
	<string name="dialog_guide">!Please note that GROUP ID must be unique. Follow the rules below!</string>
	<string name="dialog_rule1">- min 10 characters</string>
	<string name="dialog_rule2">- min 2 characters a-z</string>
	<string name="dialog_rule3">- min 2 characters A-Z</string>
	<string name="dialog_rule4">- min 2 characters 0-9</string>
	<string name="dialog_rule5">- min 2 characters =@#$%&amp;^+</string>
	<string name="soccer">SOCCER</string>
	<string name="ice_hockey">Ice-Hockey</string>
	<string name="tennis">Tennis</string>
	<string name="basketball">Basketball</string>
	<string name="handball">Handball</string>
	<string name="volleyball">Volleyball</string>
	<string name="am_football">Am.Football</string>
	<string name="title_about">About BetShare</string>
	<string name="mesage_about">Welcome to BetShare. This is a social app focused on sports betting.\n</string>
	<string name="title_help">Help</string>
	<string name="message_help1">What is GroupID: It is a unique number which is used to identify the group of people who wants to share their betting tips between each other</string>
	<string name="message_help2">GroupID can be changed within User "Detail-Settings" screen</string>
	<string name="message_help3">\nPlease report any bug at:\npacmac.dev@gmail.com</string>
	<string name="sign_in">SIGN IN</string>
	<string name="signup">SIGNUP</string>
	<string name="cancel">Cancel</string>
	<string name="bet_">bet:</string>
	<string name="app_exit_title">Tap to Exit</string>
	<string name="app_exit_message">To leave please press "Exit"</string>
	<string name="home_">HOME:</string>
	<string name="away_">AWAY:</string>
	<string name="enter_date_">Enter Date:</string>
	<string name="enter_odds_">Enter Odds:</string>
	<string name="enter_time_">Enter Time:</string>
	<string name="passed">PASSED</string>
	<string name="new_">NEW</string>
	<string name="authenticating">Authenticating</string>
	<string name="user_">"User: "</string>
	<string name="users_in_group_">"Users in group: "</string>
	<string name="events_created_">"Events created: "</string>
	<string name="settings">SETTINGS</string>
	<string name="name_">"Name: "</string>
	<string name="change_name">change name</string>
	<string name="password_">password:</string>
	<string name="new_password">new password</string>
	<string name="password_again">password again</string>
	<string name="at_least_10_characters">at least 10 characters</string>
	<string name="password_doesn_t_match_">Password doesn\'t match.</string>
	<string name="group_id_doesn_t_match_criterias">GROUP ID doesn\'t match criterias</string>
	<string name="no_internet_connection">No Internet Connection</string>
	<string name="invalid_data_input">Invalid data input</string>
	<string name="updating_user">Updating User</string>
	<string name="please_fill_all_fields">Please fill all fields</string>
	<string name="wrong_email_address_">Wrong email address.</string>
	<string name="the_passwords_do_not_match_">The passwords do not match.</string>
	<string name="name_needs_to_have_at_least_3_characters">Name needs to have at least 3 characters</string>
	<string name="connection_to_internet_is_required">Connection to internet is required</string>
	<string name="wrong_email_please_sign_up_first">Wrong email. Please SIGN UP first</string>
	<string name="this_email_is_already_registred_in_system_">This email is already registred in system.</string>
	<string name="new_user_created">NEW USER CREATED</string>
	<string name="wrong_email_or_no_connection">Wrong email or no connection</string>
	<string name="registring_user">Registring User</string>
	<string name="user_updated">User Updated</string>
	<string name="banner_ad_unit_id_login">ca-app-pub-9192035457575047/9602938815</string>
	<string name="title_info">Change Group ID!</string>
	<string name="mesage_info">Please change your Group ID to unique one which will identify your group. You can either create or subscribe to group by changing GID.\nNavigate to USER DETAIL>User Settings!</string>
	<string name="enter_name">Enter Name</string>
	<string name="password_again_">password again:</string>
	<string name="register">REGISTER</string>

</resources>