<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/fragment_bg" >

	<TextView
		android:id="@+id/sportTxtLive"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginTop="5dp"
		android:background="@color/fragment_bg"
		android:gravity="center_horizontal"
		android:text="@string/soccer"
		android:textStyle="bold|italic" />

	<WebView
		android:id="@+id/webView1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/sportTxtLive" />

	<HorizontalScrollView
		android:id="@+id/horizontalScrollView1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/adLiveScore"
		android:background="@drawable/titlegrad" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:layout_marginTop="5dp"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			<ImageView
				android:layout_width="23dp"
				android:layout_height="23dp"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="0dp"
				android:src="@drawable/arrowleft" />

			<Button
				android:id="@+id/soccerBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/soccer"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<Button
				android:id="@+id/hockeyBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/ice_hockey"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<Button
				android:id="@+id/tennisBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/tennis"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<Button
				android:id="@+id/basketBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/basketball"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<Button
				android:id="@+id/handballBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/handball"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<Button
				android:id="@+id/voleyballBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/volleyball"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<Button
				android:id="@+id/amFootballBtn"
				android:layout_width="wrap_content"
				android:layout_height="20dp"
				android:layout_marginLeft="7dp"
				android:background="@drawable/listgrandient"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:text="@string/am_football"
				android:textColor="@color/listview_group_text"
				android:textSize="10sp" />

			<ImageView
				android:layout_width="23dp"
				android:layout_height="23dp"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="7dp"
				android:layout_marginTop="3dp"
				android:background="@android:color/transparent"
				android:src="@drawable/arrowright" />
		</LinearLayout>
	</HorizontalScrollView>

	<com.google.android.gms.ads.AdView
		android:id="@+id/adLiveScore"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id_login" >
	</com.google.android.gms.ads.AdView>

</RelativeLayout>