<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bglogin" >

	<ImageView
		android:id="@+id/logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:src="@drawable/logobetshare" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_below="@+id/logo" >

		<RelativeLayout
			android:id="@+id/rLayoutLogin"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone" >

			<LinearLayout
				android:id="@+id/linLayoutloginEdit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/login"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="email"
					android:textColor="@color/listview_group_text" />

				<EditText
					android:id="@+id/editLogin"
					android:layout_width="250dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:background="#FFFFFF"
					android:ems="6"
					android:inputType="textEmailAddress" >
				</EditText>

				<TextView
					android:id="@+id/password"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:text="@string/password_"
					android:textColor="@color/listview_group_text" />

				<EditText
					android:id="@+id/editPass"
					android:layout_width="250dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:background="#FFFFFF"
					android:ems="10"
					android:inputType="textPassword" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:orientation="horizontal" >

					<Button
						android:id="@+id/signInSubmit"
						style="?android:attr/buttonStyleSmall"
						android:layout_width="130dp"
						android:layout_height="45dp"
						android:layout_weight="2"
						android:background="@drawable/btn_ok_bg"
						android:text="@string/sign_in"
						android:textColor="@color/whitetext"
						android:textStyle="bold" />

					<Button
						android:id="@+id/signInCancel"
						style="?android:attr/buttonStyleSmall"
						android:layout_width="wrap_content"
						android:layout_height="45dp"
						android:layout_marginLeft="10dp"
						android:layout_weight="1"
						android:background="@drawable/btn_regiseter"
						android:paddingLeft="15dp"
						android:paddingRight="15dp"
						android:text="@string/cancel"
						android:textColor="@color/whitetext"
						android:textStyle="bold" />
				</LinearLayout>
			</LinearLayout>
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/rLayoutRegister"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone" >

			<LinearLayout
				android:id="@+id/linLayoutRegister"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/email"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="email"
					android:textColor="@color/listview_group_text" />

				<EditText
					android:id="@+id/editEmail"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:background="#FFFFFF"
					android:ems="10"
					android:inputType="textEmailAddress" >
				</EditText>

				<TextView
					android:id="@+id/nameLogin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:text="@string/enter_name"
					android:textColor="@color/listview_group_text" />

				<EditText
					android:id="@+id/editName"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:background="#FFFFFF"
					android:ems="10"
					android:inputType="textPersonName" />

				<TextView
					android:id="@+id/password1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:text="@string/password_"
					android:textColor="@color/listview_group_text" />

				<EditText
					android:id="@+id/editPass1"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:background="#FFFFFF"
					android:ems="10"
					android:inputType="textPassword" />

				<TextView
					android:id="@+id/password2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:text="@string/password_again_"
					android:textColor="@color/listview_group_text" />

				<EditText
					android:id="@+id/editPass2"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:background="#FFFFFF"
					android:ems="10"
					android:inputType="textPassword" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:orientation="horizontal" >

					<Button
						android:id="@+id/registerSubmit"
						style="?android:attr/buttonStyleSmall"
						android:layout_width="130dp"
						android:layout_height="45dp"
						android:background="@drawable/btn_ok_bg"
						android:text="@string/register"
						android:textColor="@color/whitetext"
						android:textStyle="bold" />

					<Button
						android:id="@+id/registerCancel"
						style="?android:attr/buttonStyleSmall"
						android:layout_width="wrap_content"
						android:layout_height="45dp"
						android:layout_marginLeft="5dp"
						android:background="@drawable/btn_regiseter"
						android:paddingLeft="10dp"
						android:paddingRight="10dp"
						android:text="@string/cancel"
						android:textColor="@color/whitetext"
						android:textStyle="bold" />
				</LinearLayout>
			</LinearLayout>
		</RelativeLayout>

		<LinearLayout
			android:id="@+id/llButtonsLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="50dp"
			android:orientation="vertical"
			android:visibility="visible" >

			<Button
				android:id="@+id/signIN"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="250dp"
				android:layout_height="45dp"
				android:background="@drawable/btn_bg"
				android:text="@string/sign_in"
				android:textColor="@color/whitetext"
				android:textStyle="bold" />

			<com.facebook.widget.LoginButton
				android:id="@+id/fbbtn"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_marginTop="2dp" />

			<Button
				android:id="@+id/signG"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="250dp"
				android:layout_height="45dp"
				android:layout_marginTop="2dp"
				android:text="Login with G+ "
				android:textColor="@color/whitetext"
				android:textStyle="bold"
				android:visibility="gone" />

			<Button
				android:id="@+id/signUp"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="250dp"
				android:layout_height="45dp"
				android:layout_marginTop="2dp"
				android:background="@drawable/btn_regiseter"
				android:padding="5dp"
				android:text="@string/signup"
				android:textColor="@color/whitetext"
				android:textStyle="bold" />
		</LinearLayout>
	</LinearLayout>

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id_login" >
	</com.google.android.gms.ads.AdView>

</RelativeLayout>