<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:facebook="http://schemas.android.com/apk/res-auto"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/fragment_bg" >

	<ImageView
		android:id="@+id/logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:src="@drawable/logobetshare" />

	<LinearLayout
		android:id="@+id/linlayout2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_gravity="center_horizontal"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="20dp"
		android:gravity="center"
		android:orientation="vertical" >

		<com.facebook.widget.ProfilePictureView
			android:id="@+id/profilePicture"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:gravity="center_horizontal"
			facebook:preset_size="normal" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:orientation="vertical" >

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="left"
				android:orientation="horizontal" >

				<TextView
					android:id="@+id/userHint"
					android:layout_width="62dp"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:text="@string/user_" />

				<TextView
					android:id="@+id/userName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2dp"
					android:text="Jan Novak"
					android:textSize="15sp"
					android:textStyle="bold" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="left"
				android:orientation="horizontal" >

				<TextView
					android:id="@+id/gidHint"
					android:layout_width="62dp"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:text="Group ID: " />

				<TextView
					android:id="@+id/gidUser"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2dp"
					android:text="qweqWQWE#@@#12347-DEMO"
					android:textSize="15sp"
					android:textStyle="bold" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="left"
				android:orientation="horizontal" >

				<TextView
					android:id="@+id/emailHint"
					android:layout_width="62dp"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:text="Email: " />

				<TextView
					android:id="@+id/emailUser"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2dp"
					android:text="jan@novak.cz"
					android:textSize="15sp"
					android:textStyle="bold" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginBottom="5dp"
				android:layout_marginTop="5dp"
				android:background="@color/create_fr_bg" >
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="left"
				android:orientation="horizontal" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:text="@string/users_in_group_" />

				<TextView
					android:id="@+id/userCounter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2dp"
					android:text="Loading:"
					android:textSize="15sp"
					android:textStyle="bold" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="left"
				android:orientation="horizontal" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:text="@string/events_created_" />

				<TextView
					android:id="@+id/betCounter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2dp"
					android:text="Loading"
					android:textSize="15sp"
					android:textStyle="bold" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/adUserDetail"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/linlayout2"
		android:layout_marginBottom="15dp"
		android:layout_marginRight="15dp"
		android:orientation="horizontal" >

		<ImageView
			android:id="@+id/settingsImg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:src="@drawable/settings" />
	</LinearLayout>

	<com.google.android.gms.ads.AdView
		android:id="@+id/adUserDetail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id_login" >
	</com.google.android.gms.ads.AdView>

</RelativeLayout>